[package]
name = "discord-bot-template"
version = "0.1.0"
authors = ["Matthew <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
serde = "1.0.115"
serde_yaml = "0.8.13"
simple_logger = "1.9.0"
time = { version = "0.1.35" }
tokio-postgres = "0.5.5"
typemap = "0.3.3"

[dependencies.serenity]
version = "0.9.0-rc.1"
features = ["framework", "standard_framework", "rustls_backend", "cache", "collector"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]
